--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,14 @@
 # Run 'sudo pip install -r requirements.txt' to install these dependencies
+gunicorn==19.1.1
+Flask==0.9
+Jinja2==2.6
+MarkupSafe==0.15
+SQLAlchemy==0.7.4
+Werkzeug==0.8.1
+oauth2client==1.4
+httplib2==0.9
+psycopg2==2.4.5
+pyOpenSSL==0.12
+requests==2.6.0
 cloudinary==1.1.1
-vboxapi==1.0
 wsgiref==0.1.2
